--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@editorjs/paragraph": "^2.9.0",
     "@editorjs/quote": "^2.5.0",
     "editorjs-html": "^3.4.3",
-    "idea-react": "^1.0.0-rc.5",
+    "idea-react": "^1.0.0-rc.7",
     "koajax": "^0.8.4",
     "less": "^4.1.3",
     "less-loader": "^11.1.3",
@@ -51,6 +51,9 @@
     "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
     "typescript": "~5.1.6"
+  },
+  "resolutions": {
+    "@types/react": "17.0.62"
   },
   "prettier": {
     "singleQuote": true,
