--- a/package.json
+++ b/package.json
@@ -55,6 +55,11 @@
   "resolutions": {
     "@types/react": "17.0.62"
   },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
+  },
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all",
