--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SITE_NAME=Next-Bootstrap.ts
+NEXT_PUBLIC_SITE_NAME=freeCodeCamp 中文社区
 NEXT_PUBLIC_SITE_SUMMARY=React project scaffold based on TypeScript, Next.js, Bootstrap & Workbox.
