--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SITE_NAME=Next-Bootstrap.ts
-NEXT_PUBLIC_SITE_SUMMARY=React project scaffold based on TypeScript, Next.js, Bootstrap & Workbox.
+NEXT_PUBLIC_SITE_NAME=freeCodeCamp 中文社区
+NEXT_PUBLIC_SITE_SUMMARY=freeCodeConf 是 freeCodeCamp 中国举办的每年一度大型联动技术大会，旨在联合 freeCodeCamp 各城市本地开发者社区，促进高度垂直、高度人才集中、高度明星企业集结的互联网与软件行业技术交流。第一届 freeCodeConf 将于 2018 年 11 月 10 日在全国十二个城市同期举办。
