--- a/package.json
+++ b/package.json
@@ -7,18 +7,9 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@editorjs/code": "^2.8.0",
-    "@editorjs/editorjs": "^2.27.2",
-    "@editorjs/header": "^2.7.0",
-    "@editorjs/image": "^2.8.1",
-    "@editorjs/link": "^2.5.0",
-    "@editorjs/list": "^1.8.0",
-    "@editorjs/paragraph": "^2.9.0",
-    "@editorjs/quote": "^2.5.0",
-    "editorjs-html": "^3.4.3",
     "idea-react": "^1.0.0-rc.10",
     "koajax": "^0.8.4",
-    "less": "^4.1.3",
+    "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
     "mobx": "^5.15.7",
@@ -28,27 +19,25 @@
     "mobx-restful-table": "^1.0.4",
     "next": "^12.3.4",
     "next-pwa": "~5.6.0",
+    "next-ssr-middleware": "^0.5.0",
     "next-with-less": "^2.0.5",
-    "prismjs": "^1.29.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.8.0",
-    "react-bootstrap-editor": "^1.0.1",
     "react-dom": "^17.0.2",
-    "react-editor-js": "^2.1.0",
-    "web-utility": "^4.0.1"
+    "web-utility": "^4.1.0"
   },
   "devDependencies": {
     "@octokit/openapi-types": "^18.0.0",
-    "@types/lodash": "^4.14.196",
-    "@types/node": "^18.17.1",
-    "@types/react": "^17.0.62",
-    "eslint": "^8.46.0",
+    "@types/lodash": "^4.14.197",
+    "@types/node": "^18.17.5",
+    "@types/react": "^17.0.64",
+    "eslint": "^8.47.0",
     "eslint-config-next": "^12.3.4",
-    "eslint-config-prettier": "^8.9.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "~5.1.6"
   },
