--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@idea2app/next-bootstrap-ts",
-  "version": "0.9.0",
+  "name": "@fcc-china/ows",
+  "version": "2.0.0",
   "description": "React project scaffold based on TypeScript, Next.js, Bootstrap & Workbox.",
   "private": true,
   "engines": {
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "idea-react": "^1.0.0-rc.10",
-    "koajax": "^0.8.4",
+    "koajax": "^0.8.6",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
@@ -36,8 +36,8 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.3",
-    "prettier": "^3.0.1",
+    "lint-staged": "^14.0.0",
+    "prettier": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "~5.1.6"
   },
