--- a/package.json
+++ b/package.json
@@ -7,44 +7,53 @@
     "node": ">=18"
   },
   "dependencies": {
-    "idea-react": "^1.0.0-rc.12",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/editorjs": "^2.28.0",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/paragraph": "^2.10.0",
+    "@editorjs/quote": "^2.5.0",
+    "idea-react": "^1.0.0-rc.18",
     "koajax": "^0.8.6",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
-    "mobx": "^5.15.7",
-    "mobx-i18n": "^0.3.15",
-    "mobx-react": "^6.3.1",
-    "mobx-restful": "^0.6.5",
-    "mobx-restful-table": "^1.0.4",
+    "mobx": "^6.10.0",
+    "mobx-i18n": "^0.4.0",
+    "mobx-react": "^9.0.0",
+    "mobx-restful": "^0.6.10",
+    "mobx-restful-table": "^1.1.1",
     "next": "^12.3.4",
     "next-pwa": "~5.6.0",
-    "next-ssr-middleware": "^0.5.0",
+    "next-ssr-middleware": "^0.5.1",
     "next-with-less": "^2.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.8.0",
+    "react-bootstrap-editor": "^1.0.4",
     "react-dom": "^17.0.2",
+    "react-editor-js": "^2.1.0",
     "web-utility": "^4.1.0"
   },
   "devDependencies": {
     "@octokit/openapi-types": "^18.0.0",
     "@types/lodash": "^4.14.197",
-    "@types/node": "^18.17.5",
-    "@types/react": "^17.0.64",
-    "eslint": "^8.47.0",
+    "@types/node": "^18.17.11",
+    "@types/react": "^17.0.65",
+    "eslint": "^8.48.0",
     "eslint-config-next": "^12.3.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^14.0.0",
+    "lint-staged": "^14.0.1",
     "prettier": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "~5.1.6"
+    "typescript": "~5.1.2"
   },
   "pnpm": {
     "overrides": {
-      "@swc/helpers@~0.4": "0.4.36",
-      "@types/react": "^17"
+      "@swc/helpers@~0.4": "0.4.36"
     }
   },
   "prettier": {
