--- a/package.json
+++ b/package.json
@@ -1,45 +1,48 @@
 {
   "name": "@fcc-china/ows",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "欢迎来到 freeCodeCamp 中文社区！与编程爱好者们一起探索全国不同城市的线下技术社区，从技术交流到结对编程，与我们一起分享，共同成长。",
   "private": true,
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
-    "idea-react": "^1.0.0-rc.22",
-    "koajax": "^0.8.6",
+    "idea-react": "^2.0.0-rc.2",
+    "koajax": "^1.0.0",
     "less": "^4.2.0",
-    "less-loader": "^11.1.3",
+    "less-loader": "^12.2.0",
     "lodash": "^4.17.21",
-    "mobx": "^6.10.1",
-    "mobx-i18n": "^0.4.1",
-    "mobx-react": "^9.0.1",
-    "mobx-restful": "^0.6.11",
-    "mobx-restful-table": "^1.1.2",
-    "next": "^13.4.19",
+    "marked": "^12.0.2",
+    "mobx": "^6.12.3",
+    "mobx-i18n": "^0.5.0",
+    "mobx-react": "^9.1.1",
+    "mobx-restful": "^0.7.0-rc.0",
+    "mobx-restful-table": "^2.0.0-rc.1",
+    "next": "^14.2.3",
     "next-pwa": "~5.6.0",
-    "next-ssr-middleware": "^0.5.1",
+    "next-ssr-middleware": "^0.7.0",
     "next-with-less": "^3.0.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
-    "react-dom": "^18.2.0",
-    "web-utility": "^4.1.0"
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18.3.1",
+    "web-utility": "^4.4.0"
   },
   "devDependencies": {
-    "@octokit/openapi-types": "^18.0.0",
-    "@types/lodash": "^4.14.197",
-    "@types/node": "^18.17.12",
-    "@types/react": "^18.2.21",
-    "eslint": "^8.48.0",
-    "eslint-config-next": "^13.4.19",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "~5.2.2"
+    "@babel/plugin-proposal-decorators": "^7.24.1",
+    "@babel/plugin-transform-typescript": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
+    "@octokit/openapi-types": "^22.2.0",
+    "@types/lodash": "^4.17.0",
+    "@types/node": "^18.19.31",
+    "@types/react": "^18.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "typescript": "~5.4.5"
   },
   "prettier": {
     "singleQuote": true,
