--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@giscus/react": "^3.0.0",
     "idea-react": "^2.0.0-rc.2",
-    "koajax": "^1.0.0",
+    "koajax": "^1.1.2",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "lodash": "^4.17.21",
     "marked": "^12.0.2",
     "mobx": "^6.12.3",
+    "mobx-github": "^0.3.2",
     "mobx-i18n": "^0.5.0",
     "mobx-react": "^9.1.1",
     "mobx-restful": "^0.7.0-rc.0",
     "mobx-restful-table": "^2.0.0-rc.1",
     "next": "^14.2.3",
     "next-pwa": "~5.6.0",
-    "next-ssr-middleware": "^0.7.0",
+    "next-ssr-middleware": "^0.8.1",
     "next-with-less": "^3.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -33,20 +34,19 @@
     "web-utility": "^4.4.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.24.1",
-    "@babel/plugin-transform-typescript": "^7.24.5",
-    "@babel/preset-react": "^7.24.1",
-    "@octokit/openapi-types": "^22.2.0",
-    "@types/lodash": "^4.17.0",
-    "@types/node": "^18.19.31",
-    "@types/react": "^18.3.1",
+    "@babel/plugin-proposal-decorators": "^7.24.7",
+    "@babel/plugin-transform-typescript": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@types/lodash": "^4.17.5",
+    "@types/node": "^18.19.34",
+    "@types/react": "^18.3.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
+    "lint-staged": "^15.2.5",
+    "prettier": "^3.3.1",
     "typescript": "~5.4.5"
   },
   "prettier": {
