[migrate] upgrade to Node.js 22, Next.js 15, ESLint 9 & other latest Upstream packages [optimize] merge GitHub actions of main & other branches [remove] useless Example pages

--- a/package.json
+++ b/package.json
@@ -7,69 +7,81 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@giscus/react": "^3.0.0",
-    "idea-react": "^2.0.0-rc.2",
-    "koajax": "^3.0.1",
-    "less": "^4.2.0",
+    "@giscus/react": "^3.1.0",
+    "idea-react": "^2.0.0-rc.8",
+    "koajax": "^3.1.1",
+    "less": "^4.2.2",
     "less-loader": "^12.2.0",
     "lodash": "^4.17.21",
-    "marked": "^14.1.1",
-    "mobx": "^6.13.1",
-    "mobx-github": "^0.3.4",
-    "mobx-i18n": "^0.5.0",
-    "mobx-react": "^9.1.1",
-    "mobx-restful": "^1.0.1",
-    "mobx-restful-table": "^2.0.0",
-    "next": "^14.2.7",
+    "marked": "^15.0.6",
+    "mobx": "^6.13.6",
+    "mobx-github": "^0.3.5",
+    "mobx-i18n": "^0.6.0",
+    "mobx-react": "^9.2.0",
+    "mobx-restful": "^2.1.0",
+    "mobx-restful-table": "^2.0.1",
+    "next": "^15.1.6",
     "next-pwa": "~5.6.0",
-    "next-ssr-middleware": "^0.8.7",
+    "next-ssr-middleware": "^0.8.9",
     "next-with-less": "^3.0.1",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
-    "undici": "^6.19.8",
-    "web-utility": "^4.4.0"
+    "undici": "^7.3.0",
+    "web-utility": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.24.7",
-    "@babel/plugin-transform-typescript": "^7.25.2",
-    "@babel/preset-react": "^7.24.7",
-    "@types/lodash": "^4.17.7",
+    "@babel/plugin-proposal-decorators": "^7.25.9",
+    "@babel/plugin-transform-typescript": "^7.26.7",
+    "@babel/preset-react": "^7.26.3",
+    "@eslint/compat": "^1.2.6",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.19.0",
+    "@softonus/prettier-plugin-duplicate-remover": "^1.1.2",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/eslint__eslintrc": "^2.1.2",
+    "@types/lodash": "^4.17.15",
     "@types/next-pwa": "^5.6.9",
-    "@types/node": "^20.16.4",
-    "@types/react": "^18.3.5",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.7",
-    "eslint-config-prettier": "^9.1.0",
+    "@types/node": "^22.13.0",
+    "@types/react": "^18.3.18",
+    "eslint": "^9.19.0",
+    "eslint-config-next": "^15.1.6",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "husky": "^9.1.5",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3",
-    "typescript": "~5.5.4"
+    "globals": "^15.14.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.4.2",
+    "prettier-plugin-css-order": "^2.1.2",
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.22.0"
   },
   "resolutions": {
-    "native-file-system-adapter": "npm:@tech_query/native-file-system-adapter@^3.0.1"
+    "next": "$next"
   },
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all",
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "plugins": [
+      "prettier-plugin-css-order",
+      "@softonus/prettier-plugin-duplicate-remover"
+    ]
   },
   "lint-staged": {
-    "*.{html,md,less,json,yml,js,mjs,ts,tsx}": "prettier --write",
-    "*.{js,mjs,ts,tsx}": "eslint --fix"
+    "*.{html,md,less,json,yml,js,mjs,ts,tsx}": "prettier --write"
   },
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "dev": "next dev",
     "build": "next build",
-    "export": "next build  &&  next export",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix  &&  git add .",
     "test": "lint-staged  &&  npm run lint  &&  tsc --noEmit",
     "pack-image": "docker build -t next-bootstrap-ts:latest .",
     "container": "docker rm -f next-bootstrap-ts  &&  docker run --name next-bootstrap-ts -p 3000:3000 -d next-bootstrap-ts:latest"
