[refactor] isolate Internationalization data with MobX-i18n 0.7 & React context [migrate] upgrade to PNPM 10, React 19, Next.js 16, Next-SSR-middleware 1.0, Marked 17, MobX-GitHub 0.6, Lint Staged 16 & other latest Upstream packages [migrate] upgrade ESLint configuration to TS & Pure Flat schema [optimize] simplify GitHub copilot codes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "downlevelIteration": true,
     "useDefineForClassFields": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.mjs", "**/*.ts", "**/*.tsx"],
