--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
   },
   "scripts": {
     "prepare": "husky || true",
+    "install": "next typegen",
     "dev": "next dev --webpack",
     "build": "next build --webpack",
     "start": "next start",
