[add] User model & session form [add] GitHub OAuth middleware & API proxy

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "mobx-github": "^0.6.2",
     "mobx-i18n": "^0.7.2",
     "mobx-react": "^9.2.1",
+    "mobx-react-helper": "^0.5.1",
     "mobx-restful": "^2.1.4",
     "mobx-restful-table": "^2.5.5",
+    "mobx-supabase": "^0.1.0",
     "next": "^16.0.1",
     "next-pwa": "~5.6.0",
     "next-ssr-middleware": "^1.0.3",
@@ -52,6 +54,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "git-utility": "^0.2.1",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "jiti": "^2.6.1",
@@ -86,6 +89,7 @@
   "scripts": {
     "prepare": "husky || true",
     "install": "next typegen",
+    "postinstall": "xgit download https://github.com/freeCodeCamp-China/key-vault main Web-site  ||  true",
     "dev": "next dev --webpack",
     "build": "next build --webpack",
     "start": "next start",
