[migrate] replace Next.js API handler with Koa router

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.6",
     "@giscus/react": "^3.1.0",
     "idea-react": "^2.0.0-rc.13",
+    "koa": "^3.1.1",
     "koajax": "^3.1.2",
     "less": "^4.4.2",
     "less-loader": "^12.3.0",
@@ -46,6 +47,7 @@
     "@softonus/prettier-plugin-duplicate-remover": "^1.1.2",
     "@stylistic/eslint-plugin": "^5.5.0",
     "@types/eslint-config-prettier": "^6.11.3",
+    "@types/koa": "^3.0.1",
     "@types/lodash": "^4.17.20",
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^22.19.0",
